parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> S
Rule 1     S -> DEFVAR FUNCIONES MAIN FUNCIONES
Rule 2     DEFVAR -> VAR LLLAV VARIABLE RLLAV
Rule 3     DEFVAR -> <empty>
Rule 4     VARIABLE -> VARIABLE X ID TIPO ENDINS
Rule 5     VARIABLE -> VARIABLE X ID TIPO ARRAY ENDINS
Rule 6     VARIABLE -> <empty>
Rule 7     X -> X ID COMA
Rule 8     X -> <empty>
Rule 9     TIPO -> INT
Rule 10    TIPO -> DOUBLE
Rule 11    ARRAY -> LCOR EXPAR RCOR
Rule 12    ARRAY -> LCOR EXPAR RCOR LCOR EXPAR RCOR
Rule 13    ARRAY -> LCOR EXPAR RCOR LCOR EXPAR RCOR LCOR EXPAR RCOR
Rule 14    FUNCIONES -> FUNCIONES FUNC ID LLLAV ESTATUTOS RLLAV
Rule 15    FUNCIONES -> <empty>
Rule 16    MAIN -> FUNC MAINT LLLAV ESTATUTOS RLLAV
Rule 17    ESTATUTOS -> ESTATUTOS ASIGNACION
Rule 18    ESTATUTOS -> ESTATUTOS LLAMADAS
Rule 19    ESTATUTOS -> ESTATUTOS IF
Rule 20    ESTATUTOS -> ESTATUTOS FOR
Rule 21    ESTATUTOS -> ESTATUTOS WHILE
Rule 22    ESTATUTOS -> ESTATUTOS SCAN
Rule 23    ESTATUTOS -> ESTATUTOS PUTS
Rule 24    ESTATUTOS -> <empty>
Rule 25    ASIGNACION -> ID IGUAL EXPAR ENDINS
Rule 26    ASIGNACION -> ID ARRAY IGUAL EXPAR ENDINS
Rule 27    LLAMADAS -> CALL ID ENDINS
Rule 28    IF -> IFT EXPLOG LLLAV ESTATUTOS RLLAV ELIF ELSE
Rule 29    ELIF -> ELIF ELIFT EXPLOG LLLAV ESTATUTOS RLLAV
Rule 30    ELIF -> <empty>
Rule 31    ELSE -> ELST LLLAV ESTATUTOS RLLAV
Rule 32    ELSE -> <empty>
Rule 33    FOR -> FORT EXPLOG LLLAV ESTATUTOS RLLAV
Rule 34    WHILE -> WHILET EXPLOG LLLAV ESTATUTOS RLLAV
Rule 35    WHILE -> DOT LLLAV ESTATUTOS RLLAV WHILET EXPLOG ENDINS
Rule 36    SCAN -> SCANT LPAR Y ID RPAR ENDINS
Rule 37    SCAN -> SCANT LPAR Y ID ARRAY RPAR ENDINS
Rule 38    Y -> Y ID COMA
Rule 39    Y -> <empty>
Rule 40    PUTS -> PUTST LPAR Z LINE RPAR ENDINS
Rule 41    Z -> Z LINE COMA
Rule 42    Z -> <empty>
Rule 43    LINE -> ID
Rule 44    LINE -> ID ARRAY
Rule 45    LINE -> EXPAR
Rule 46    LINE -> STRING

Terminals, with rules where they appear

CALL                 : 27
COMA                 : 7 38 41
DOT                  : 35
DOUBLE               : 10
ELIFT                : 29
ELST                 : 31
ENDINS               : 4 5 25 26 27 35 36 37 40
EXPAR                : 11 12 12 13 13 13 25 26 45
EXPLOG               : 28 29 33 34 35
FORT                 : 33
FUNC                 : 14 16
ID                   : 4 5 7 14 25 26 27 36 37 38 43 44
IFT                  : 28
IGUAL                : 25 26
INT                  : 9
LCOR                 : 11 12 12 13 13 13
LLLAV                : 2 14 16 28 29 31 33 34 35
LPAR                 : 36 37 40
MAINT                : 16
PUTST                : 40
RCOR                 : 11 12 12 13 13 13
RLLAV                : 2 14 16 28 29 31 33 34 35
RPAR                 : 36 37 40
SCANT                : 36 37
STRING               : 46
VAR                  : 2
WHILET               : 34 35
error                : 

Nonterminals, with rules where they appear

ARRAY                : 5 26 37 44
ASIGNACION           : 17
DEFVAR               : 1
ELIF                 : 28 29
ELSE                 : 28
ESTATUTOS            : 14 16 17 18 19 20 21 22 23 28 29 31 33 34 35
FOR                  : 20
FUNCIONES            : 1 1 14
IF                   : 19
LINE                 : 40 41
LLAMADAS             : 18
MAIN                 : 1
PUTS                 : 23
S                    : 0
SCAN                 : 22
TIPO                 : 4 5
VARIABLE             : 2 4 5
WHILE                : 21
X                    : 4 5 7
Y                    : 36 37 38
Z                    : 40 41

Parsing method: LALR

state 0

    (0) S' -> . S
    (1) S -> . DEFVAR FUNCIONES MAIN FUNCIONES
    (2) DEFVAR -> . VAR LLLAV VARIABLE RLLAV
    (3) DEFVAR -> .

    VAR             shift and go to state 3
    FUNC            reduce using rule 3 (DEFVAR -> .)

    S                              shift and go to state 1
    DEFVAR                         shift and go to state 2

state 1

    (0) S' -> S .



state 2

    (1) S -> DEFVAR . FUNCIONES MAIN FUNCIONES
    (14) FUNCIONES -> . FUNCIONES FUNC ID LLLAV ESTATUTOS RLLAV
    (15) FUNCIONES -> .

    FUNC            reduce using rule 15 (FUNCIONES -> .)

    FUNCIONES                      shift and go to state 4

state 3

    (2) DEFVAR -> VAR . LLLAV VARIABLE RLLAV

    LLLAV           shift and go to state 5


state 4

    (1) S -> DEFVAR FUNCIONES . MAIN FUNCIONES
    (14) FUNCIONES -> FUNCIONES . FUNC ID LLLAV ESTATUTOS RLLAV
    (16) MAIN -> . FUNC MAINT LLLAV ESTATUTOS RLLAV

    FUNC            shift and go to state 7

    MAIN                           shift and go to state 6

state 5

    (2) DEFVAR -> VAR LLLAV . VARIABLE RLLAV
    (4) VARIABLE -> . VARIABLE X ID TIPO ENDINS
    (5) VARIABLE -> . VARIABLE X ID TIPO ARRAY ENDINS
    (6) VARIABLE -> .

    RLLAV           reduce using rule 6 (VARIABLE -> .)
    ID              reduce using rule 6 (VARIABLE -> .)

    VARIABLE                       shift and go to state 8

state 6

    (1) S -> DEFVAR FUNCIONES MAIN . FUNCIONES
    (14) FUNCIONES -> . FUNCIONES FUNC ID LLLAV ESTATUTOS RLLAV
    (15) FUNCIONES -> .

    FUNC            reduce using rule 15 (FUNCIONES -> .)
    $end            reduce using rule 15 (FUNCIONES -> .)

    FUNCIONES                      shift and go to state 9

state 7

    (14) FUNCIONES -> FUNCIONES FUNC . ID LLLAV ESTATUTOS RLLAV
    (16) MAIN -> FUNC . MAINT LLLAV ESTATUTOS RLLAV

    ID              shift and go to state 10
    MAINT           shift and go to state 11


state 8

    (2) DEFVAR -> VAR LLLAV VARIABLE . RLLAV
    (4) VARIABLE -> VARIABLE . X ID TIPO ENDINS
    (5) VARIABLE -> VARIABLE . X ID TIPO ARRAY ENDINS
    (7) X -> . X ID COMA
    (8) X -> .

    RLLAV           shift and go to state 12
    ID              reduce using rule 8 (X -> .)

    X                              shift and go to state 13

state 9

    (1) S -> DEFVAR FUNCIONES MAIN FUNCIONES .
    (14) FUNCIONES -> FUNCIONES . FUNC ID LLLAV ESTATUTOS RLLAV

    $end            reduce using rule 1 (S -> DEFVAR FUNCIONES MAIN FUNCIONES .)
    FUNC            shift and go to state 14


state 10

    (14) FUNCIONES -> FUNCIONES FUNC ID . LLLAV ESTATUTOS RLLAV

    LLLAV           shift and go to state 15


state 11

    (16) MAIN -> FUNC MAINT . LLLAV ESTATUTOS RLLAV

    LLLAV           shift and go to state 16


state 12

    (2) DEFVAR -> VAR LLLAV VARIABLE RLLAV .

    FUNC            reduce using rule 2 (DEFVAR -> VAR LLLAV VARIABLE RLLAV .)


state 13

    (4) VARIABLE -> VARIABLE X . ID TIPO ENDINS
    (5) VARIABLE -> VARIABLE X . ID TIPO ARRAY ENDINS
    (7) X -> X . ID COMA

    ID              shift and go to state 17


state 14

    (14) FUNCIONES -> FUNCIONES FUNC . ID LLLAV ESTATUTOS RLLAV

    ID              shift and go to state 10


state 15

    (14) FUNCIONES -> FUNCIONES FUNC ID LLLAV . ESTATUTOS RLLAV
    (17) ESTATUTOS -> . ESTATUTOS ASIGNACION
    (18) ESTATUTOS -> . ESTATUTOS LLAMADAS
    (19) ESTATUTOS -> . ESTATUTOS IF
    (20) ESTATUTOS -> . ESTATUTOS FOR
    (21) ESTATUTOS -> . ESTATUTOS WHILE
    (22) ESTATUTOS -> . ESTATUTOS SCAN
    (23) ESTATUTOS -> . ESTATUTOS PUTS
    (24) ESTATUTOS -> .

    RLLAV           reduce using rule 24 (ESTATUTOS -> .)
    ID              reduce using rule 24 (ESTATUTOS -> .)
    CALL            reduce using rule 24 (ESTATUTOS -> .)
    IFT             reduce using rule 24 (ESTATUTOS -> .)
    FORT            reduce using rule 24 (ESTATUTOS -> .)
    WHILET          reduce using rule 24 (ESTATUTOS -> .)
    DOT             reduce using rule 24 (ESTATUTOS -> .)
    SCANT           reduce using rule 24 (ESTATUTOS -> .)
    PUTST           reduce using rule 24 (ESTATUTOS -> .)

    ESTATUTOS                      shift and go to state 18

state 16

    (16) MAIN -> FUNC MAINT LLLAV . ESTATUTOS RLLAV
    (17) ESTATUTOS -> . ESTATUTOS ASIGNACION
    (18) ESTATUTOS -> . ESTATUTOS LLAMADAS
    (19) ESTATUTOS -> . ESTATUTOS IF
    (20) ESTATUTOS -> . ESTATUTOS FOR
    (21) ESTATUTOS -> . ESTATUTOS WHILE
    (22) ESTATUTOS -> . ESTATUTOS SCAN
    (23) ESTATUTOS -> . ESTATUTOS PUTS
    (24) ESTATUTOS -> .

    RLLAV           reduce using rule 24 (ESTATUTOS -> .)
    ID              reduce using rule 24 (ESTATUTOS -> .)
    CALL            reduce using rule 24 (ESTATUTOS -> .)
    IFT             reduce using rule 24 (ESTATUTOS -> .)
    FORT            reduce using rule 24 (ESTATUTOS -> .)
    WHILET          reduce using rule 24 (ESTATUTOS -> .)
    DOT             reduce using rule 24 (ESTATUTOS -> .)
    SCANT           reduce using rule 24 (ESTATUTOS -> .)
    PUTST           reduce using rule 24 (ESTATUTOS -> .)

    ESTATUTOS                      shift and go to state 19

state 17

    (4) VARIABLE -> VARIABLE X ID . TIPO ENDINS
    (5) VARIABLE -> VARIABLE X ID . TIPO ARRAY ENDINS
    (7) X -> X ID . COMA
    (9) TIPO -> . INT
    (10) TIPO -> . DOUBLE

    COMA            shift and go to state 21
    INT             shift and go to state 22
    DOUBLE          shift and go to state 23

    TIPO                           shift and go to state 20

state 18

    (14) FUNCIONES -> FUNCIONES FUNC ID LLLAV ESTATUTOS . RLLAV
    (17) ESTATUTOS -> ESTATUTOS . ASIGNACION
    (18) ESTATUTOS -> ESTATUTOS . LLAMADAS
    (19) ESTATUTOS -> ESTATUTOS . IF
    (20) ESTATUTOS -> ESTATUTOS . FOR
    (21) ESTATUTOS -> ESTATUTOS . WHILE
    (22) ESTATUTOS -> ESTATUTOS . SCAN
    (23) ESTATUTOS -> ESTATUTOS . PUTS
    (25) ASIGNACION -> . ID IGUAL EXPAR ENDINS
    (26) ASIGNACION -> . ID ARRAY IGUAL EXPAR ENDINS
    (27) LLAMADAS -> . CALL ID ENDINS
    (28) IF -> . IFT EXPLOG LLLAV ESTATUTOS RLLAV ELIF ELSE
    (33) FOR -> . FORT EXPLOG LLLAV ESTATUTOS RLLAV
    (34) WHILE -> . WHILET EXPLOG LLLAV ESTATUTOS RLLAV
    (35) WHILE -> . DOT LLLAV ESTATUTOS RLLAV WHILET EXPLOG ENDINS
    (36) SCAN -> . SCANT LPAR Y ID RPAR ENDINS
    (37) SCAN -> . SCANT LPAR Y ID ARRAY RPAR ENDINS
    (40) PUTS -> . PUTST LPAR Z LINE RPAR ENDINS

    RLLAV           shift and go to state 25
    ID              shift and go to state 24
    CALL            shift and go to state 33
    IFT             shift and go to state 34
    FORT            shift and go to state 35
    WHILET          shift and go to state 36
    DOT             shift and go to state 37
    SCANT           shift and go to state 38
    PUTST           shift and go to state 39

    ASIGNACION                     shift and go to state 26
    LLAMADAS                       shift and go to state 27
    IF                             shift and go to state 28
    FOR                            shift and go to state 29
    WHILE                          shift and go to state 30
    SCAN                           shift and go to state 31
    PUTS                           shift and go to state 32

state 19

    (16) MAIN -> FUNC MAINT LLLAV ESTATUTOS . RLLAV
    (17) ESTATUTOS -> ESTATUTOS . ASIGNACION
    (18) ESTATUTOS -> ESTATUTOS . LLAMADAS
    (19) ESTATUTOS -> ESTATUTOS . IF
    (20) ESTATUTOS -> ESTATUTOS . FOR
    (21) ESTATUTOS -> ESTATUTOS . WHILE
    (22) ESTATUTOS -> ESTATUTOS . SCAN
    (23) ESTATUTOS -> ESTATUTOS . PUTS
    (25) ASIGNACION -> . ID IGUAL EXPAR ENDINS
    (26) ASIGNACION -> . ID ARRAY IGUAL EXPAR ENDINS
    (27) LLAMADAS -> . CALL ID ENDINS
    (28) IF -> . IFT EXPLOG LLLAV ESTATUTOS RLLAV ELIF ELSE
    (33) FOR -> . FORT EXPLOG LLLAV ESTATUTOS RLLAV
    (34) WHILE -> . WHILET EXPLOG LLLAV ESTATUTOS RLLAV
    (35) WHILE -> . DOT LLLAV ESTATUTOS RLLAV WHILET EXPLOG ENDINS
    (36) SCAN -> . SCANT LPAR Y ID RPAR ENDINS
    (37) SCAN -> . SCANT LPAR Y ID ARRAY RPAR ENDINS
    (40) PUTS -> . PUTST LPAR Z LINE RPAR ENDINS

    RLLAV           shift and go to state 40
    ID              shift and go to state 24
    CALL            shift and go to state 33
    IFT             shift and go to state 34
    FORT            shift and go to state 35
    WHILET          shift and go to state 36
    DOT             shift and go to state 37
    SCANT           shift and go to state 38
    PUTST           shift and go to state 39

    ASIGNACION                     shift and go to state 26
    LLAMADAS                       shift and go to state 27
    IF                             shift and go to state 28
    FOR                            shift and go to state 29
    WHILE                          shift and go to state 30
    SCAN                           shift and go to state 31
    PUTS                           shift and go to state 32

state 20

    (4) VARIABLE -> VARIABLE X ID TIPO . ENDINS
    (5) VARIABLE -> VARIABLE X ID TIPO . ARRAY ENDINS
    (11) ARRAY -> . LCOR EXPAR RCOR
    (12) ARRAY -> . LCOR EXPAR RCOR LCOR EXPAR RCOR
    (13) ARRAY -> . LCOR EXPAR RCOR LCOR EXPAR RCOR LCOR EXPAR RCOR

    ENDINS          shift and go to state 41
    LCOR            shift and go to state 43

    ARRAY                          shift and go to state 42

state 21

    (7) X -> X ID COMA .

    ID              reduce using rule 7 (X -> X ID COMA .)


state 22

    (9) TIPO -> INT .

    ENDINS          reduce using rule 9 (TIPO -> INT .)
    LCOR            reduce using rule 9 (TIPO -> INT .)


state 23

    (10) TIPO -> DOUBLE .

    ENDINS          reduce using rule 10 (TIPO -> DOUBLE .)
    LCOR            reduce using rule 10 (TIPO -> DOUBLE .)


state 24

    (25) ASIGNACION -> ID . IGUAL EXPAR ENDINS
    (26) ASIGNACION -> ID . ARRAY IGUAL EXPAR ENDINS
    (11) ARRAY -> . LCOR EXPAR RCOR
    (12) ARRAY -> . LCOR EXPAR RCOR LCOR EXPAR RCOR
    (13) ARRAY -> . LCOR EXPAR RCOR LCOR EXPAR RCOR LCOR EXPAR RCOR

    IGUAL           shift and go to state 44
    LCOR            shift and go to state 43

    ARRAY                          shift and go to state 45

state 25

    (14) FUNCIONES -> FUNCIONES FUNC ID LLLAV ESTATUTOS RLLAV .

    FUNC            reduce using rule 14 (FUNCIONES -> FUNCIONES FUNC ID LLLAV ESTATUTOS RLLAV .)
    $end            reduce using rule 14 (FUNCIONES -> FUNCIONES FUNC ID LLLAV ESTATUTOS RLLAV .)


state 26

    (17) ESTATUTOS -> ESTATUTOS ASIGNACION .

    RLLAV           reduce using rule 17 (ESTATUTOS -> ESTATUTOS ASIGNACION .)
    ID              reduce using rule 17 (ESTATUTOS -> ESTATUTOS ASIGNACION .)
    CALL            reduce using rule 17 (ESTATUTOS -> ESTATUTOS ASIGNACION .)
    IFT             reduce using rule 17 (ESTATUTOS -> ESTATUTOS ASIGNACION .)
    FORT            reduce using rule 17 (ESTATUTOS -> ESTATUTOS ASIGNACION .)
    WHILET          reduce using rule 17 (ESTATUTOS -> ESTATUTOS ASIGNACION .)
    DOT             reduce using rule 17 (ESTATUTOS -> ESTATUTOS ASIGNACION .)
    SCANT           reduce using rule 17 (ESTATUTOS -> ESTATUTOS ASIGNACION .)
    PUTST           reduce using rule 17 (ESTATUTOS -> ESTATUTOS ASIGNACION .)


state 27

    (18) ESTATUTOS -> ESTATUTOS LLAMADAS .

    RLLAV           reduce using rule 18 (ESTATUTOS -> ESTATUTOS LLAMADAS .)
    ID              reduce using rule 18 (ESTATUTOS -> ESTATUTOS LLAMADAS .)
    CALL            reduce using rule 18 (ESTATUTOS -> ESTATUTOS LLAMADAS .)
    IFT             reduce using rule 18 (ESTATUTOS -> ESTATUTOS LLAMADAS .)
    FORT            reduce using rule 18 (ESTATUTOS -> ESTATUTOS LLAMADAS .)
    WHILET          reduce using rule 18 (ESTATUTOS -> ESTATUTOS LLAMADAS .)
    DOT             reduce using rule 18 (ESTATUTOS -> ESTATUTOS LLAMADAS .)
    SCANT           reduce using rule 18 (ESTATUTOS -> ESTATUTOS LLAMADAS .)
    PUTST           reduce using rule 18 (ESTATUTOS -> ESTATUTOS LLAMADAS .)


state 28

    (19) ESTATUTOS -> ESTATUTOS IF .

    RLLAV           reduce using rule 19 (ESTATUTOS -> ESTATUTOS IF .)
    ID              reduce using rule 19 (ESTATUTOS -> ESTATUTOS IF .)
    CALL            reduce using rule 19 (ESTATUTOS -> ESTATUTOS IF .)
    IFT             reduce using rule 19 (ESTATUTOS -> ESTATUTOS IF .)
    FORT            reduce using rule 19 (ESTATUTOS -> ESTATUTOS IF .)
    WHILET          reduce using rule 19 (ESTATUTOS -> ESTATUTOS IF .)
    DOT             reduce using rule 19 (ESTATUTOS -> ESTATUTOS IF .)
    SCANT           reduce using rule 19 (ESTATUTOS -> ESTATUTOS IF .)
    PUTST           reduce using rule 19 (ESTATUTOS -> ESTATUTOS IF .)


state 29

    (20) ESTATUTOS -> ESTATUTOS FOR .

    RLLAV           reduce using rule 20 (ESTATUTOS -> ESTATUTOS FOR .)
    ID              reduce using rule 20 (ESTATUTOS -> ESTATUTOS FOR .)
    CALL            reduce using rule 20 (ESTATUTOS -> ESTATUTOS FOR .)
    IFT             reduce using rule 20 (ESTATUTOS -> ESTATUTOS FOR .)
    FORT            reduce using rule 20 (ESTATUTOS -> ESTATUTOS FOR .)
    WHILET          reduce using rule 20 (ESTATUTOS -> ESTATUTOS FOR .)
    DOT             reduce using rule 20 (ESTATUTOS -> ESTATUTOS FOR .)
    SCANT           reduce using rule 20 (ESTATUTOS -> ESTATUTOS FOR .)
    PUTST           reduce using rule 20 (ESTATUTOS -> ESTATUTOS FOR .)


state 30

    (21) ESTATUTOS -> ESTATUTOS WHILE .

    RLLAV           reduce using rule 21 (ESTATUTOS -> ESTATUTOS WHILE .)
    ID              reduce using rule 21 (ESTATUTOS -> ESTATUTOS WHILE .)
    CALL            reduce using rule 21 (ESTATUTOS -> ESTATUTOS WHILE .)
    IFT             reduce using rule 21 (ESTATUTOS -> ESTATUTOS WHILE .)
    FORT            reduce using rule 21 (ESTATUTOS -> ESTATUTOS WHILE .)
    WHILET          reduce using rule 21 (ESTATUTOS -> ESTATUTOS WHILE .)
    DOT             reduce using rule 21 (ESTATUTOS -> ESTATUTOS WHILE .)
    SCANT           reduce using rule 21 (ESTATUTOS -> ESTATUTOS WHILE .)
    PUTST           reduce using rule 21 (ESTATUTOS -> ESTATUTOS WHILE .)


state 31

    (22) ESTATUTOS -> ESTATUTOS SCAN .

    RLLAV           reduce using rule 22 (ESTATUTOS -> ESTATUTOS SCAN .)
    ID              reduce using rule 22 (ESTATUTOS -> ESTATUTOS SCAN .)
    CALL            reduce using rule 22 (ESTATUTOS -> ESTATUTOS SCAN .)
    IFT             reduce using rule 22 (ESTATUTOS -> ESTATUTOS SCAN .)
    FORT            reduce using rule 22 (ESTATUTOS -> ESTATUTOS SCAN .)
    WHILET          reduce using rule 22 (ESTATUTOS -> ESTATUTOS SCAN .)
    DOT             reduce using rule 22 (ESTATUTOS -> ESTATUTOS SCAN .)
    SCANT           reduce using rule 22 (ESTATUTOS -> ESTATUTOS SCAN .)
    PUTST           reduce using rule 22 (ESTATUTOS -> ESTATUTOS SCAN .)


state 32

    (23) ESTATUTOS -> ESTATUTOS PUTS .

    RLLAV           reduce using rule 23 (ESTATUTOS -> ESTATUTOS PUTS .)
    ID              reduce using rule 23 (ESTATUTOS -> ESTATUTOS PUTS .)
    CALL            reduce using rule 23 (ESTATUTOS -> ESTATUTOS PUTS .)
    IFT             reduce using rule 23 (ESTATUTOS -> ESTATUTOS PUTS .)
    FORT            reduce using rule 23 (ESTATUTOS -> ESTATUTOS PUTS .)
    WHILET          reduce using rule 23 (ESTATUTOS -> ESTATUTOS PUTS .)
    DOT             reduce using rule 23 (ESTATUTOS -> ESTATUTOS PUTS .)
    SCANT           reduce using rule 23 (ESTATUTOS -> ESTATUTOS PUTS .)
    PUTST           reduce using rule 23 (ESTATUTOS -> ESTATUTOS PUTS .)


state 33

    (27) LLAMADAS -> CALL . ID ENDINS

    ID              shift and go to state 46


state 34

    (28) IF -> IFT . EXPLOG LLLAV ESTATUTOS RLLAV ELIF ELSE

    EXPLOG          shift and go to state 47


state 35

    (33) FOR -> FORT . EXPLOG LLLAV ESTATUTOS RLLAV

    EXPLOG          shift and go to state 48


state 36

    (34) WHILE -> WHILET . EXPLOG LLLAV ESTATUTOS RLLAV

    EXPLOG          shift and go to state 49


state 37

    (35) WHILE -> DOT . LLLAV ESTATUTOS RLLAV WHILET EXPLOG ENDINS

    LLLAV           shift and go to state 50


state 38

    (36) SCAN -> SCANT . LPAR Y ID RPAR ENDINS
    (37) SCAN -> SCANT . LPAR Y ID ARRAY RPAR ENDINS

    LPAR            shift and go to state 51


state 39

    (40) PUTS -> PUTST . LPAR Z LINE RPAR ENDINS

    LPAR            shift and go to state 52


state 40

    (16) MAIN -> FUNC MAINT LLLAV ESTATUTOS RLLAV .

    FUNC            reduce using rule 16 (MAIN -> FUNC MAINT LLLAV ESTATUTOS RLLAV .)
    $end            reduce using rule 16 (MAIN -> FUNC MAINT LLLAV ESTATUTOS RLLAV .)


state 41

    (4) VARIABLE -> VARIABLE X ID TIPO ENDINS .

    RLLAV           reduce using rule 4 (VARIABLE -> VARIABLE X ID TIPO ENDINS .)
    ID              reduce using rule 4 (VARIABLE -> VARIABLE X ID TIPO ENDINS .)


state 42

    (5) VARIABLE -> VARIABLE X ID TIPO ARRAY . ENDINS

    ENDINS          shift and go to state 53


state 43

    (11) ARRAY -> LCOR . EXPAR RCOR
    (12) ARRAY -> LCOR . EXPAR RCOR LCOR EXPAR RCOR
    (13) ARRAY -> LCOR . EXPAR RCOR LCOR EXPAR RCOR LCOR EXPAR RCOR

    EXPAR           shift and go to state 54


state 44

    (25) ASIGNACION -> ID IGUAL . EXPAR ENDINS

    EXPAR           shift and go to state 55


state 45
